Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -41,30 +41,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-2-e0f18fb4f646>, line 4)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-2-e0f18fb4f646>\"\u001b[0;36m, line \u001b[0;32m4\u001b[0m\n\u001b[0;31m    .df tbody tr th {\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Your code here\n",
     "import pandas as pd\n",
-    "df = pd.read_csv('Data/Zipcode_Demos.csv',header=1)\n",
-    ".df tbody tr th {\n",
-    "    vertical-align: top;\n",
-    "}\n",
-    "\n",
-    ".dataframe thead th {\n",
-    "    text-align: right;\n",
-    "}\n",
-    "\n"
+    "df = pd.read_csv('Data/Zipcode_Demos.csv',header=1)\n"
    ]
   },
   {
